FIXED: Extract and extend placeholder selectors. Extracted patterns for center-aligned text, left and right padding, and inline-block display and extended them throughout partials.

--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -1,8 +1,8 @@
 .col {
-	display:inline-block;
-	padding-left: 1em;
-	padding-right: 1em;
+	@extend %inline-block;
+	@extend %padding-lt-rt;
 }
+
 .col-sm-12 {
 	width: 100%;
 	margin-bottom: 50px;
