--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -3,3 +3,11 @@
 %centered {
 	text-align: center;
 }
+
+%inline-block {
+	display: inline-block;
+}
+
+%padding-lt-rt {
+	padding: 0 1em;
+}
