--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,11 +1,10 @@
 .main-footer {
-	padding: 2em 2em;
 	background: $bg-footer;
 }
 
 .footer-nav {
-	float:right;
-	list-style:none;
+	float: right;
+	list-style: none;
 	text-transform: uppercase;
 	margin-top: 6px;
 	margin-bottom: 6px;
@@ -15,5 +14,5 @@
 	border-top: 1px solid #dddddd;
 	width: 90%;
 	margin: 0 auto;
-	padding: 1em 0 1em 0;
+	padding: 1em 0;
 }
