--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,27 +5,27 @@
 	margin-bottom: 30px;
 	text-align: center;
 }
-
 /* ---- Navigation ---- */
-
 .main-heading,
 .main-nav,
 .main-nav li {
 	display: block;
-	background:none;
+	background: none;
 	padding-left: 0;
 }
-
 // Use Sass Nesting
 ul {
-	.main-nav, .footer-nav {
+	.footer-nav,
+	.main-nav {
 		list-style: none;
 	}
+
 	.main-nav {
 		padding-left: 0;
 	}
+
 	.footer-nav {
-		display: inline-block;
+		@extend %inline-block;
 	}
 }
 
@@ -33,17 +33,20 @@ ul {
 	margin-top: 6px;
 	margin-bottom: 6px;
 }
+
 .main-nav {
 	li {
 		@extend .main-heading;
 		background: #fff;
 	}
+
 	a {
 		font-size: $text-size-med;
 		color: $text-color;
 		font-weight: bold;
 		text-transform: uppercase;
 	}
+
 	& a:hover {
 		color: $nav-hover-color;
 	}
@@ -51,7 +54,7 @@ ul {
 
 .main-heading a,
 .main-nav a {
-	padding: 10px 0px;
+	padding: 10px 0;
 	display: block;
 }
 
@@ -64,6 +67,6 @@ ul {
 
 .footer-name,
 .footer-nav a {
-	padding: 10px 10px;
+	padding: 10px;
 	display: block;
 }
